--- a/github1.html
+++ b/github1.html
@@ -7,6 +7,9 @@
 <body>
 	<h1>Welcome to Benno 86</h1>
 	<h2>I dare say, the Most Important Webpage ever</h2><br>
-	<p><h3>Hello Mom!</h3></p>
+	<p><h3>Hello Mom!</h3></p><br>
+	<video width="500" height="400" controls>
+		<source src="Video1.mp4" type="video/mp4">
+		</video><br>
 	</body>
 	</html>
